--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				<td>Lewis Carroll</td>
 			</tr>
 			<tr>
-				<td><em>Peter Pan</td></em> 								
+				<td><em>Peter Pan</em></td> 								
 				<td>J. M. Barrie</td>
 			</tr>
 			<tr>
-				<td><em>The Wonderful Wizard of Oz</td></em> 				
+				<td><em>The Wonderful Wizard of Oz</em></td>				
 				<td>L. Frank Baum</td>
 			</tr>
 		</table>
@@ -48,7 +48,7 @@
 	</div>
 	
 	<div>
-		<p><strong>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a>
+		<p><strong>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></p>
 		<ul>
 			<li><strong>Kathryn Harper</strong></li>
 			<li><strong>ITMD-361</strong></li>
