--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div>
 		<p><strong>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></p>
 		<ul>
-			<li><strong>Kathryn Harper</strong></li>
+			<li><strong>Kathryn A Harper</strong></li>
 			<li><strong>ITMD-361</strong></li>
 			<li><strong>Lab 3</strong></li>
 		</ul>
