--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 	</div>
 	
 	<div>
-		<p><strong>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></p>
+		<p><strong>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></strong></p>
 		<ul>
-			<li><strong>Kathryn A Harper</strong></li>
-			<li><strong>ITMD-361</strong></li>
-			<li><strong>Lab 3</strong></li>
+			<li> <strong>Kathryn A Harper</strong> </li>
+			<li><strong>ITMD-361</strong> </li>
+			<li> <strong>Lab 3</strong> </li>
 		</ul>
 	</div>
 		
